automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,7 @@
     "\n",
     "# parse the S256Point and Signature\n",
     "point = S256Point.parse(bytes.fromhex(hex_sec))\n",
-    "sig = Signature.parse())\n",
+    "sig = Signature.parse(hex_sig)\n",
     "# parse the Tx\n",
     "tx = Tx.parse(bytes.fromhex(hex_tx)\n",
     "\n",
