automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
     "point = S256Point.parse(bytes.fromhex(hex_sec))\n",
     "sig = Signature.parse(hex_der)\n",
     "# parse the Tx\n",
-    "tx = Tx.parse(bytes.fromhex(hex_tx)\n",
+    "tx = Tx.parse(bytes.fromhex(stream)\n",
     "\n",
     "\n",
     "\n",
